Update and rename fsb.sample.env to fsb.env

--- a/fsb.env
+++ b/fsb.env
@@ -1,13 +1,13 @@
 # Required Variables (DO NOT SKIP THESE)
 
-API_ID=
-API_HASH=
-BOT_TOKEN=
-LOG_CHANNEL=
+API_ID=12729506
+API_HASH=db72a48c995f76c8f5381e5d129a1f9d
+BOT_TOKEN=8132370424:AAHavjmknJemLjMuocLJSyuISPocNTtkb_4
+LOG_CHANNEL=-1001562082384
 
 # Optional Variables
 
-PORT=8080
+# PORT=8080
 
 # The length of the hash in your URLs
 # https://domain.tld/1254?hash=asd45a
